errors.txt
src/StaticLS/Logger.hs:15:1: warning: [-Wunused-imports]
    The qualified import of ‘Data.Text’ is redundant
      except perhaps to import instances from ‘Data.Text’
    To import instances alone, use: import Data.Text()
   |
15 | import Data.Text qualified as T
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src/StaticLS/StaticEnv.hs:93:13: error: [GHC-88464] [-Wdeferred-out-of-scope-variables, Werror=deferred-out-of-scope-variables]
    Variable not in scope: T.pack :: [Char] -> Text
    NB: no module named ‘T’ is imported.
   |
93 |   logInfo $ T.pack $ "fileStates: " ++ show fileStates
   |             ^^^^^^
src/StaticLS/StaticEnv.hs:148:12: warning: [GHC-30606] [-Wredundant-constraints]
    Redundant constraint: HasCallStack
    In the type signature for:
         logWith :: forall (m :: * -> *).
                    (HasCallStack, HasStaticEnv m, MonadIO m) =>
                    Colog.Severity -> Text -> CallStack -> m ()
    |
148 | logWith :: (HasCallStack, HasStaticEnv m, MonadIO m) => Colog.Severity -> Text -> Logger.CallStack -> m ()
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src/StaticLS/TreeSitter/Query.hs:9:47: warning: [-Wunused-imports]
    The import of ‘liftA2’
    from module ‘Control.Applicative’ is redundant
  |
9 | import Control.Applicative (Alternative (..), liftA2)
  |                                               ^^^^^^
